solved some bugs on small devices with conditionary renders

--- a/src/App.css
+++ b/src/App.css
@@ -123,6 +123,7 @@ body {
               .app__booklist--item--container--bookinfo--text {
                 max-width: 61%; } }
             .app__booklist--item--container--bookinfo--text--title {
+              cursor: pointer;
               margin-top: 0.7rem;
               position: relative;
               top: 0;
