--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -172,6 +172,7 @@ body {
             flex-direction: column;
             margin-left: 2.3rem;
             &--title {
+              cursor: pointer;
               margin-top: 0.7rem;
               position: relative;
               top: 0;
